[package]
name = "varlink-http-bridge"
version = "0.1.0"
edition = "2024"
license = "LGPL-2.1-or-later"

[features]
default = ["sshauth"]
sshauth = ["dep:ssh-key", "dep:sshauth", "dep:ureq", "dep:tempfile"]

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["ws"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
# not using default features as we don't need service/server/introspection
zlink = { version = "0.4", default-features = false, features = ["tokio", "proxy", "idl-parse", "tracing"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["color", "humantime"] }
# not using clap here as its relatively heavy (500kb-1Mb depending on cfg)
lexopt = "0.3"
# not using full regex as it adds more bloat and our requirements are minimal
regex-lite = "0.1"
listenfd = "1.0.2"
tungstenite = "0.28"
rustix = { version = "1.0", features = ["event", "process"] }
signal-hook = "0.3"
# using opeenssl here to keep size small, rusttls adds ~1.8MB binary size
# and nativetls does not support mTLS
openssl = "0.10"
tokio-openssl = "0.6"
indoc = "2.0.7"
ssh-key = { version = "0.6", optional = true }
sshauth = { version = "0.1", optional = true }
ureq = { version = "3", optional = true, default-features = false, features = ["native-tls"] }
tempfile = { version = "3.10", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
test-with = { version = "0.14", default-features = false, features = ["runtime"] }
scopeguard = "1.2"
gethostname = "1.1.0"
tempfile = "3.10"
tokio-tungstenite = "0.28"
futures-util = { version = "0.3" }
tower = { version = "0.5", features = ["util"] }

[profile.release]
strip = true
